--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -15,7 +15,7 @@ jobs:
         run: date +%s > report.txt
 
       - name: Create Pull Request
-        id: 
+        id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.PAT }}
