--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
           commit-message: Update report
-          committer: GitHub <noreply@github.com>
-          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          committer: K.takehsima <k.takeshima@degiple.com>
+          author: K.takehsima <k.takeshima@degiple.com>
           signoff: false
           branch: staging
           delete-branch: true
