--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -11,30 +11,30 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Make changes to pull request
-        run: date +%s > report.txt
+#       - name: Make changes to pull request
+#         run: date +%s > report.txt
 
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.PAT }}
-          commit-message: Update report
-          committer: GitHub <noreply@github.com>
-          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-          signoff: false
-          branch: staging
-          delete-branch: true
-          title: 'Automatic create-pull-request from actions'
-          body: master から staging ブランチへのプルリクエスト
-          labels: automated pr
-          # assignees: 
-          # reviewers: 
-          team-reviewers: |
-            owners
-            maintainers
-          # milestone: 1
-          draft: false
+#         with:
+#           token: ${{ secrets.PAT }}
+#           commit-message: Update report
+#           committer: GitHub <noreply@github.com>
+#           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+#           signoff: false
+#           branch: staging
+#           delete-branch: true
+#           title: 'Automatic create-pull-request from actions'
+#           body: master から staging ブランチへのプルリクエスト
+#           labels: automated pr
+#           # assignees: 
+#           # reviewers: 
+#           team-reviewers: |
+#             owners
+#             maintainers
+#           # milestone: 1
+#           draft: false
 
       - name: Check outputs
         run: |
