--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
-#         with:
+        with:
 #           token: ${{ secrets.PAT }}
 #           commit-message: Update report
 #           committer: GitHub <noreply@github.com>
 #           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
 #           signoff: false
-#           branch: staging
+          branch: staging
 #           delete-branch: true
 #           title: 'Automatic create-pull-request from actions'
 #           body: master から staging ブランチへのプルリクエスト
