--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -11,8 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Make changes to pull request
-        run: date +%s > report.txt
+      - name: Create commits
+        run: |
+          git config user.name 'k takeshima'
+          git config user.email 'k.takeshima@degiple.com'
+          date +%s > report.txt
+          git commit -am "Modify tracked file during workflow"
+          date +%s > new-report.txt
+          git add -A
+          git commit -m "Add untracked file during workflow"
+
+#       - name: Make changes to pull request
+#         run: date +%s > report.txt
 
       - name: Create Pull Request
         id: cpr
@@ -34,7 +44,7 @@ jobs:
 #             owners
 #             maintainers
 #           # milestone: 1
-          draft: false
+          draft: true
 
       - name: Check outputs
         run: |
