--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -25,16 +25,16 @@ jobs:
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
-#         with:
+        with:
 #           token: ${{ secrets.PAT }}
 #           commit-message: Update report
 #           committer: GitHub <noreply@github.com>
 #           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
 #           signoff: false
-#           branch: staging
-#           delete-branch: false
-#           title: 'Automatic create-pull-request from actions'
-#           body: master から staging ブランチへのプルリクエスト
+          branch: staging
+          delete-branch: false
+          title: 'Automatic create-pull-request from actions'
+          body: master から staging ブランチへのプルリクエスト
 #           labels: automated pr
 # #           milestone: 1
 #           draft: false
