--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -30,4 +30,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ steps.create_branch.outputs.branch_name }}
         # run: hub pull-request -m "Github Actions からプルリクを出す" -b master -h $BRANCH_NAME -l "PR:draft" -r "$REVIEWERS"
-        run: hub pull-request -m "Github Actions からプルリクを出す" -b develop -h master -l "PR:draft"
+        run: hub pull-request -m "Github Actions からプルリクを出す" -b staging -h master -l "PR:draft"
