--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -20,6 +20,6 @@ jobs:
           BASE_BRANCH: staging
           HEAD_BRANCH: master
         run: |
-          hub pull-request -m 'Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH') \
+          hub pull-request -m 'Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH)' \
           --base $BASE_BRANCH --head $HEAD_BRANCH \
           -l 'PR:$BASE_BRANCH<-$HEAD_BRANCH'
