--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -19,7 +19,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE_BRANCH: staging
           HEAD_BRANCH: master
+          COMMIT_ID: ${{ github.sha }}
         run: |
-          hub pull-request -m "Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH)" \
+          hub pull-request -m "Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH) #${COMMIT_ID:0:7}" \
           --base $BASE_BRANCH --head $HEAD_BRANCH \
           -l "PR:$BASE_BRANCH<-$HEAD_BRANCH"
