--- a/.github/workflows/create-pr-for-production.yml
+++ b/.github/workflows/create-pr-for-production.yml
@@ -16,10 +16,12 @@ jobs:
 
       - name: Create Pull Request
         env:
+          GITHUB_USER: ${{ secrets.GITHUB_USER }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE_BRANCH: production
           HEAD_BRANCH: staging
+          COMMIT_ID: ${{ github.sha }}
         run: |
-          hub pull-request -m "Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH)" \
+          hub pull-request -m "Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH) #${COMMIT_ID:0:7}" \
           --base $BASE_BRANCH --head $HEAD_BRANCH \
           -l "PR:$BASE_BRANCH<-$HEAD_BRANCH"
