--- a/.github/workflows/create-pr-for-production.yml
+++ b/.github/workflows/create-pr-for-production.yml
@@ -22,6 +22,7 @@ jobs:
           HEAD_BRANCH: staging
           COMMIT_ID: ${{ github.sha }}
         run: |
+          echo $GITHUB_USER
           hub pull-request -m "Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH) #${COMMIT_ID:0:7}" \
           --base $BASE_BRANCH --head $HEAD_BRANCH \
           -l "PR:$BASE_BRANCH<-$HEAD_BRANCH"
