--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -6,7 +6,7 @@ name: GitHub Context
 # events but only for the master branch
 on:
   push:
-    branches: [master]
+    branches: [master, staging]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
