--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,35 +1,35 @@
-# This is a basic workflow to help you get started with Actions
+# # This is a basic workflow to help you get started with Actions
 
-name: Generate
+# name: Generate
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [master]
+# # Controls when the action will run. Triggers the workflow on push or pull request
+# # events but only for the master branch
+# on:
+#   push:
+#     branches: [master]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  generate:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.2.0
-        with:
-          fetch-depth: 0
-      - name: "Get Previous tag"
-        id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@master"
+# # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# jobs:
+#   generate:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2.2.0
+#         with:
+#           fetch-depth: 0
+#       - name: "Get Previous tag"
+#         id: previoustag
+#         uses: "WyriHaximus/github-action-get-previous-tag@master"
 
-      - name: "Get next minor version"
-        id: semvers
-        uses: "WyriHaximus/github-action-next-semvers@master"
-        with:
-          version: ${{ steps.previoustag.outputs.tag }}
+#       - name: "Get next minor version"
+#         id: semvers
+#         uses: "WyriHaximus/github-action-next-semvers@master"
+#         with:
+#           version: ${{ steps.previoustag.outputs.tag }}
 
-      - name: "Create new milestone"
-        id: createmilestone
-        uses: "WyriHaximus/github-action-create-milestone@master"
-        with:
-          title: v${{ steps.semvers.outputs.patch }}
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+#       - name: "Create new milestone"
+#         id: createmilestone
+#         uses: "WyriHaximus/github-action-create-milestone@master"
+#         with:
+#           title: v${{ steps.semvers.outputs.patch }}
+#         env:
+#           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
