--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,35 +1,37 @@
-# # This is a basic workflow to help you get started with Actions
+# This is a basic workflow to help you get started with Actions
 
-# name: Generate
+name: version up
 
-# # Controls when the action will run. Triggers the workflow on push or pull request
-# # events but only for the master branch
-# on:
-#   push:
-#     branches: [master]
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+  push:
+    branches: [master]
 
-# # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-# jobs:
-#   generate:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2.2.0
-#         with:
-#           fetch-depth: 0
-#       - name: "Get Previous tag"
-#         id: previoustag
-#         uses: "WyriHaximus/github-action-get-previous-tag@master"
-
-#       - name: "Get next minor version"
-#         id: semvers
-#         uses: "WyriHaximus/github-action-next-semvers@master"
-#         with:
-#           version: ${{ steps.previoustag.outputs.tag }}
-
-#       - name: "Create new milestone"
-#         id: createmilestone
-#         uses: "WyriHaximus/github-action-create-milestone@master"
-#         with:
-#           title: v${{ steps.semvers.outputs.patch }}
-#         env:
-#           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.2.0
+      - name: "Get latest tag"
+        id: latest
+        run: |
+          TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+          echo ::set-output name=tag::$TAG
+      - name: "Create next tag"
+        id: next
+        env:
+          TAG: ${{ steps.latest.outputs.tag }}
+        run: |
+          version=$(echo ${TAG#*v})
+          list=(${version//./ })
+          major=$(echo ${list[0]}) && minor=$(echo ${list[1]})
+          next_minor=$((minor+1))
+          echo ::set-output name=tag::$(echo "v${major}.${next_minor}")
+      - name: "Push next tag"
+        env:
+          NEXT_TAG: ${{ steps.next.outputs.tag }}
+        run: |
+          git tag $NEXT_TAG
+          git push --tag
