--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.2.0
+      - name: Unshallow
+        run: git fetch --prune --unshallow --tags
       - name: "Get latest tag"
         id: latest
         run: |
