--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -1,37 +1,37 @@
-name: Create Pull Request (staging <- master)
+# name: Create Pull Request (staging <- master)
 
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
 
-jobs:
-  createPullRequest:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+# jobs:
+#   createPullRequest:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Install hub
-        uses: geertvdc/setup-hub@v1.0.0
+#       - name: Install hub
+#         uses: geertvdc/setup-hub@v1.0.0
 
-      - name: Create tmp Branch
-        id: create_branch
-        env:
-          TZ: "Asia/Tokyo"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          DATE=`date "+%y%m%d-%H%M%S"`
-          BRANCH_NAME="master_v$DATE"
-          git checkout -b "$BRANCH_NAME"
-          git push origin "$BRANCH_NAME"
-          echo ::set-output name=branch_name::$BRANCH_NAME
+#       - name: Create tmp Branch
+#         id: create_branch
+#         env:
+#           TZ: "Asia/Tokyo"
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         run: |
+#           DATE=`date "+%y%m%d-%H%M%S"`
+#           BRANCH_NAME="master_v$DATE"
+#           git checkout -b "$BRANCH_NAME"
+#           git push origin "$BRANCH_NAME"
+#           echo ::set-output name=branch_name::$BRANCH_NAME
 
-      - name: Create Pull Request
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BASE_BRANCH: staging
-          HEAD_BRANCH: ${{ steps.create_branch.outputs.branch_name }}
-        run: |
-          hub pull-request -m "Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH)" \
-          --base $BASE_BRANCH --head $HEAD_BRANCH \
-          -l "PR:$BASE_BRANCH<-master"
+#       - name: Create Pull Request
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           BASE_BRANCH: staging
+#           HEAD_BRANCH: ${{ steps.create_branch.outputs.branch_name }}
+#         run: |
+#           hub pull-request -m "Automatic PR ($BASE_BRANCH <- $HEAD_BRANCH)" \
+#           --base $BASE_BRANCH --head $HEAD_BRANCH \
+#           -l "PR:$BASE_BRANCH<-master"
