--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -9,6 +9,7 @@ on:
     branches: [master]
 
 env:
+
   IMAGE_NAME: myweb
 
 
@@ -49,17 +50,14 @@ jobs:
       # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
         run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Push image to GitHub Container Registry
+      - name: Push image:myweb to GitHub Container Registry
+        env:
+          NEXT_TAG: ${{ steps.next.outputs.tag }}
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/test-actions/$IMAGE_NAME
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "$default-branch" ] && VERSION=latest
+          VERSION=$NEXT_TAG
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
