--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -9,9 +9,8 @@ on:
     branches: [master]
 
 env:
-
-  IMAGE_NAME: myweb
-
+  WEB_IMAGE_NAME: myweb
+  APP_IMAGE_NAME: myapp
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -43,22 +42,34 @@ jobs:
           git tag $NEXT_TAG
           git push --tags
 
-      - name: Build image
-        run: docker build ./ --file ./web/Dockerfile --tag $IMAGE_NAME
-
       - name: Log into GitHub Container Registry
       # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
         run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
-
+      - name: Build image
+        run: |
+          docker build ./ --file ./web/Dockerfile --tag $WEB_IMAGE_NAME
+          docker build ./myapp --tag $APP_IMAGE_NAME
       - name: Push image:myweb to GitHub Container Registry
         env:
           NEXT_TAG: ${{ steps.next.outputs.tag }}
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$WEB_IMAGE_NAME
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           VERSION=$NEXT_TAG
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker tag $WEB_IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
+      - name: Push image:myapp to GitHub Container Registry
+        env:
+          NEXT_TAG: ${{ steps.next.outputs.tag }}
+        run: |
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$APP_IMAGE_NAME
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          VERSION=$NEXT_TAG
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+          docker tag $APP_IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
