--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -42,10 +42,11 @@ jobs:
           git push --tags
       #     echo $NEXT_TAG > tag_version.txt
       # - name: Upload tag version as Atifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: tag_version
-          path: tag_version.txt
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: tag_version
+      #     path: tag_version.txt
+
   web_build:
     needs: tag_version_up
     runs-on: ubuntu-latest
@@ -75,6 +76,7 @@ jobs:
           echo VERSION=$VERSION
           docker tag $WEB_IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
+
   app_build:
     needs: tag_version_up
     runs-on: ubuntu-latest
