--- a/.github/workflows/create-pr-for-staging.yml
+++ b/.github/workflows/create-pr-for-staging.yml
@@ -62,6 +62,8 @@ jobs:
         run: |
           echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build image
+        env:
+          DOCKER_BUILDKIT: 1
         run: |
           docker build ./ --file ./web/Dockerfile --tag $WEB_IMAGE_NAME
       - name: Push image:myweb to GitHub Container Registry
@@ -92,6 +94,8 @@ jobs:
         run: |
           echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build image
+        env:
+          DOCKER_BUILDKIT: 1
         run: |
           docker build ./myapp --tag $APP_IMAGE_NAME
       - name: Push image:myapp to GitHub Container Registry
