--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  create:
+  push:
     tags:
-      - v*
+      - "v*"
 
 env:
   WEB_IMAGE_NAME: myweb
@@ -62,7 +62,7 @@ jobs:
       - name: Log into GitHub Container Registry
         run: |
           echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Build & Push image to GCR 
+      - name: Build & Push image to GCR
         env:
           DOCKER_BUILDKIT: 1
           NEXT_TAG: ${{ steps.next.outputs.tag }}
@@ -93,7 +93,7 @@ jobs:
       - name: Log into GitHub Container Registry
         run: |
           echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Build & Push image to GCR 
+      - name: Build & Push image to GCR
         env:
           DOCKER_BUILDKIT: 1
           NEXT_TAG: ${{ steps.next.outputs.tag }}
