--- a/myweb/Dockerfile
+++ b/myweb/Dockerfile
@@ -1,10 +1,10 @@
 FROM nginx:alpine
 
 ENV NGINX_BASIC_AUTHENTICATION off
-ENV NGINX_PORXY_PASS_HOST app
+ENV NGINX_PORXY_PASS_HOST localhost
 
 # Nginx config
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./web/nginx/templates/ /etc/nginx/templates/
+COPY ./myweb/nginx/templates/ /etc/nginx/templates/
 
 CMD ["nginx", "-g", "daemon off;"]
