--- a/.github/workflows/staging-cd.yml
+++ b/.github/workflows/staging-cd.yml
@@ -97,4 +97,43 @@ jobs:
           docker tag $GCR_IMAGE_ID:$TAG $ECR_REGISTRY/$APP_ECR_REPOSITORY:$TAG
           docker push $ECR_REGISTRY/$APP_ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$APP_ECR_REPOSITORY:$TAG
-
+  deploy:
+    needs: [push_web, push_app]
+    name: Deploy ECS
+    runs-on: ubuntu-latest
+      - name: Get tag version
+        id: tag_version
+        run: |
+          message='${{ github.event.head_commit.message }}'
+          list=(${message//_/ })
+          echo ::set-output name=tag::${list[-1]}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-1
+      - name: Login to Amazon ECR
+        id: login_ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Render Amazon ECS task definition for first container
+        id: render-web-container
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: ${WEB_ECR_REPOSITORY}
+          image: ${{ steps.login-ecr.outputs.registry }}/${WEB_ECR_REPOSITORY}:${{ steps.tag_version.outputs.tag }}
+      - name: Modify Amazon ECS task definition with second container
+        id: render-app-container
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-web-container.outputs.task-definition }}
+          container-name: ${APP_ECR_REPOSITORY}
+          image: ${{ steps.login-ecr.outputs.registry }}/${APP_ECR_REPOSITORY}:${{ steps.tag_version.outputs.tag }}
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-app-container.outputs.task-definition }}
+          service: apokaku-daniel-web-app-albService259B0016-eEzvjnfvd0qR
+          cluster: apokaku-daniel-web-app-cluster611F8AFF-cxgAdmZFJFtK
+          wait-for-service-stability: true
