--- a/.github/workflows/staging-cd.yml
+++ b/.github/workflows/staging-cd.yml
@@ -9,6 +9,8 @@ env:
   WEB_ECR_REPOSITORY: apokaku-daniel-web
   APP_GCR_REPOSITORY: myapp
   APP_ECR_REPOSITORY: apokaku-daniel-app
+  ECS_SERVICE: apokaku-daniel-web-app-albService259B0016-eEzvjnfvd0qR
+  ECS_CLUSTER: apokaku-daniel-web-app-cluster611F8AFF-cxgAdmZFJFtK
 
 jobs:
   push_web:
@@ -42,12 +44,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
       - name: Login to Amazon ECR
-        id: login_ecr
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       - name: push image to Amazon ECR
         env:
           GCR_IMAGE_ID: ${{ steps.gcr.outputs.image_id }}
-          ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           TAG: ${{ steps.tag_version.outputs.tag }}
         run: |
           docker tag $GCR_IMAGE_ID:$TAG $ECR_REGISTRY/$WEB_ECR_REPOSITORY:latest
@@ -85,12 +87,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
       - name: Login to Amazon ECR
-        id: login_ecr
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       - name: push image to Amazon ECR
         env:
           GCR_IMAGE_ID: ${{ steps.gcr.outputs.image_id }}
-          ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           TAG: ${{ steps.tag_version.outputs.tag }}
         run: |
           docker tag $GCR_IMAGE_ID:$TAG $ECR_REGISTRY/$APP_ECR_REPOSITORY:latest
@@ -109,6 +111,13 @@ jobs:
           message='${{ github.event.head_commit.message }}'
           list=(${message//_/ })
           echo ::set-output name=tag::${list[-1]}
+      - name: Set args for task-definition
+        id: args
+        run: |
+          echo ::set-output name=web::${WEB_ECR_REPOSITORY}
+          echo ::set-output name=app::${APP_ECR_REPOSITORY}
+          echo ::set-output name=service::${ECS_SERVICE}
+          echo ::set-output name=cluster::${ECS_CLUSTER}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -116,26 +125,26 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
       - name: Login to Amazon ECR
-        id: login_ecr
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      - name: Render Amazon ECS task definition for first container
+      - name: Render Amazon ECS task definition for web container
         id: render-web-container
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: ${WEB_ECR_REPOSITORY}
-          image: ${{ steps.login-ecr.outputs.registry }}/${WEB_ECR_REPOSITORY}:${{ steps.tag_version.outputs.tag }}
-      - name: Modify Amazon ECS task definition with second container
+          container-name: ${{ steps.args.outputs.web }}
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ steps.args.outputs.web }}:${{ steps.tag_version.outputs.tag }}
+      - name: Modify Amazon ECS task definition with app container
         id: render-app-container
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ${{ steps.render-web-container.outputs.task-definition }}
-          container-name: ${APP_ECR_REPOSITORY}
-          image: ${{ steps.login-ecr.outputs.registry }}/${APP_ECR_REPOSITORY}:${{ steps.tag_version.outputs.tag }}
+          container-name: ${{ steps.args.outputs.app }}
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ steps.args.outputs.app }}:${{ steps.tag_version.outputs.tag }}
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.render-app-container.outputs.task-definition }}
-          service: apokaku-daniel-web-app-albService259B0016-eEzvjnfvd0qR
-          cluster: apokaku-daniel-web-app-cluster611F8AFF-cxgAdmZFJFtK
+          service: ${{ steps.args.outputs.service }}
+          cluster: ${{ steps.args.outputs.service }}
           wait-for-service-stability: true
