--- a/.github/workflows/staging-cd.yml
+++ b/.github/workflows/staging-cd.yml
@@ -131,7 +131,7 @@ jobs:
         id: render-web-container
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: task-definition-stg.json
           container-name: ${{ steps.args.outputs.web }}
           image: ${{ steps.login-ecr.outputs.registry }}/${{ steps.args.outputs.web }}:${{ steps.tag_version.outputs.tag }}
       - name: Modify Amazon ECS task definition with app container
@@ -146,5 +146,5 @@ jobs:
         with:
           task-definition: ${{ steps.render-app-container.outputs.task-definition }}
           service: ${{ steps.args.outputs.service }}
-          cluster: ${{ steps.args.outputs.service }}
+          cluster: ${{ steps.args.outputs.cluster }}
           wait-for-service-stability: true
