--- a/.github/workflows/staging-cd.yml
+++ b/.github/workflows/staging-cd.yml
@@ -155,3 +155,6 @@ jobs:
           service: ${{ steps.args.outputs.service }}
           cluster: ${{ steps.args.outputs.cluster }}
           wait-for-service-stability: true
+          # codedeploy-appspec: appspec.json
+          # codedeploy-application: AppECS-apokaku-daniel-cluster-apokaku-daniel-service
+          # codedeploy-deployment-group: DgpECS-apokaku-daniel-cluster-apokaku-daniel-service
