--- a/.github/workflows/staging-ci.yml
+++ b/.github/workflows/staging-ci.yml
@@ -110,8 +110,8 @@ jobs:
           git fetch --prune --unshallow --tags
           TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
           echo ::set-output name=tag::$TAG
-      - name: Install hub
-        uses: geertvdc/setup-hub@v1.0.0
+      # - name: Install hub
+      #   uses: geertvdc/setup-hub@v1.0.0
       - name: Create tmp Branch
         id: create_branch
         env:
